compute-cluster/gitops/components/cilium/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: kube-system
spec:
  gatewayClassName: cilium
  addresses:
  - value: 130.246.55.235
    type: IPAddress
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: https
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
#      certificateRefs:
#      - name: compute-tls
    allowedRoutes:
      namespaces:
        from: All
