compute-cluster/gitops/components/cilium/http-routes.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
  - name: gateway
    namespace: kube-system
  hostnames:
  - compute.isis.cclrc.ac.uk
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /argocd
    backendRefs:
    - name: argocd-server
      port: 80
#---
#apiVersion: gateway.networking.k8s.io/v1
#kind: HTTPRoute
#metadata:
#  name: grafana-route
#  namespace: monitoring
#spec:
#  parentRefs:
#  - name: gateway
#    namespace: kube-system
#  hostnames:
#  - isis-compute.isis.cclrc.ac.uk
#  rules:
#  - matches:
#    - path:
#        type: PathPrefix
#        value: /grafana
#    backendRefs:
#    - name: observability-grafana
#      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-route
  namespace: kube-system
spec:
  parentRefs:
  - name: gateway
    namespace: kube-system
  hostnames:
  - compute.isis.cclrc.ac.uk
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /hubble
    backendRefs:
    - name: hubble-ui
      port: 80
